@@ -1,2 +1,4 @@
 Alan Meadows <alan.meadows@gmail.com>
 Felipe Monteiro <felipe.monteiro@att.com>
+Felipe Monteiro <fmontei@users.noreply.github.com>
+Scott Hussey <sh8121@att.com>
