@@ -8,6 +8,6 @@ To run::
 	$ sudo pip install uwsgi
 	$ virtualenv -p python3 /var/tmp/deckhand
 	$ . /var/tmp/deckhand/bin/activate
-	$ sudo pip install .
+	$ pip install .
 	$ python setup.py install
 	$ uwsgi --http :9000 -w deckhand.deckhand --callable deckhand --enable-threads -L
