@@ -1,0 +1,35 @@
+[loggers]
+keys=root
+
+[handlers]
+keys=file,devel,syslog
+
+[formatters]
+keys=simple,tests
+
+[logger_root]
+level=DEBUG
+handlers=file
+
+[handler_file]
+class=FileHandler
+level=DEBUG
+args=('deckhand.log', 'w+')
+formatter=tests
+
+[handler_syslog]
+class=handlers.SysLogHandler
+level=ERROR
+args = ('/dev/log', handlers.SysLogHandler.LOG_USER)
+
+[handler_devel]
+class=StreamHandler
+level=DEBUG
+args=(sys.stdout,)
+formatter=simple
+
+[formatter_tests]
+class = oslo_log.formatters.ContextFormatter
+
+[formatter_simple]
+format=%(asctime)s.%(msecs)03d %(process)d %(levelname)s: %(message)s
