@@ -1,6 +1,14 @@
 falcon==1.1.0
+
+pbr!=2.1.0,>=2.0.0 # Apache-2.0
+six>=1.9.0 # MIT
+stevedore>=1.20.0 # Apache-2.0
 oslo.config>=3.22.0 # Apache-2.0
-oslo.config>=3.22.0  # Apache-2.0
+oslo.context>=2.14.0 # Apache-2.0
+oslo.log>=3.22.0 # Apache-2.0
 oslo.serialization>=1.10.0  # Apache-2.0
+oslo.utils>=3.20.0 # Apache-2.0
+oslo.i18n!=3.15.2,>=2.1.0 # Apache-2.0
+
 python-barbicanclient>=4.0.0  # Apache-2.0
 keystoneauth1>=2.21.0  # Apache-2.0
